更新设备页面

--- a/code/LaundryWeb/Home/Tpl/Index/equipment.html
+++ b/code/LaundryWeb/Home/Tpl/Index/equipment.html
@@ -61,7 +61,7 @@
 </div><!--/header -->      
 <!--=== End Header ===-->
 <!--=== Breadcrumbs ===-->
-<div class="breadcrumbs margin-bottom-10">
+<div class="breadcrumbs margin-bottom-40">
 	<div class="container">
         <h1 class="color-green pull-left">快客洗涤设备展示</h1>
         <ul class="pull-right breadcrumb">
@@ -70,126 +70,83 @@
         </ul>
     </div><!--/container-->
 </div><!--/breadcrumbs-->
-<!--=== End Breadcrumbs ===-->
-<div class="container">	
-<!--=== Slider ===-->
-	<div class="headline"><h3>干洗机设备系列</h3></div>
-    <ul class="thumbnails">
-        <li class="span3">
-            <div class="thumbnail-style thumbnail-kenburn">
-            	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/PM系列裘皮干洗机.jpg" alt="" /></div>				
+<!--=== Content Part ===-->
+<div class="container portfolio-item"> 	
+	<div class="row-fluid margin-bottom-20"> 
+		<!-- Carousel -->
+        <div class="span7">
+            <div id="myCarousel" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="__PUBLIC__/Fuego/img/equipment/gx-1.jpg" alt="" />
+                        <div class="carousel-caption">
+                            <h4>干洗系列--PM系列裘皮干洗机</h4>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="__PUBLIC__/Fuego/img/equipment/gx-2.jpg" alt="" />
+                        <div class="carousel-caption">
+                            <h4>干洗系列--P系列第五代干洗机</h4>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="__PUBLIC__/Fuego/img/equipment/sx-1.jpg" alt="" />
+                        <div class="carousel-caption">
+                            <h4>水洗系列--SXT-250ZQ(SX-25D)</h4>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="__PUBLIC__/Fuego/img/equipment/sx-2.jpg" alt="" />
+                        <div class="carousel-caption">
+                            <h4>水洗系列--SXTH-120DQ(XTH-12SD)</h4>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="__PUBLIC__/Fuego/img/equipment/HG-1.jpg" alt="" />
+                        <div class="carousel-caption">
+                            <h4>烘干系列--2000Z(DQ)烘干机</h4>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="__PUBLIC__/Fuego/img/equipment/HG-2.jpg" alt="" />
+                        <div class="carousel-caption">
+                            <h4>烘干系列--700DQ烘干机</h4>
+                        </div>
+                    </div>
                 </div>
-                <h3><a class="hover-effect" href="#">PM系列裘皮干洗机</a></h3>
-                <p></p>
-            </div>
-        </li>
-        <li class="span3">
-            <div class="thumbnail-style thumbnail-kenburn">
-            	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/P系列第五代干洗机.jpg" alt="" /></div>				
+                <div class="carousel-arrow">
+                    <a data-slide="prev" href="#myCarousel" class="left carousel-control"><i class="icon-angle-left"></i></a>
+                    <a data-slide="next" href="#myCarousel" class="right carousel-control"><i class="icon-angle-right"></i></a>
                 </div>
-                <h3><a class="hover-effect" href="#">P系列第五代干洗机</a></h3>
-                <p></p>
             </div>
-        </li>
-        <li class="span3">
-            <div class="thumbnail-style thumbnail-kenburn">
-            	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/PM系列裘皮干洗机.jpg" alt="" /></div>				
-                </div>
-                <h3><a class="hover-effect" href="#">PM系列裘皮干洗机</a></h3>
-                <p></p>
-            </div>
-        </li>
-        <li class="span3">
-            <div class="thumbnail-style thumbnail-kenburn">
-            	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/PM系列裘皮干洗机.jpg" alt="" /></div>					
-                </div>
-                <h3><a class="hover-effect" href="#">PM系列裘皮干洗机</a></h3>
-                <p></p>
-            </div>
-        </li>
-    </ul>
-    <div class="headline"><h3>水洗机设备系列</h3></div>
-    <ul class="thumbnails">
-        <li class="span3">
-            <div class="thumbnail-style thumbnail-kenburn">
-            	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/SXT-250ZQ(SX-25D).jpg" alt="" /></div>				
-                </div>
-                <h3><a class="hover-effect" href="#">SXT-250ZQ(SX-25D)</a></h3>
-                <p></p>
-            </div>
-        </li>
-        <li class="span3">
-            <div class="thumbnail-style thumbnail-kenburn">
-            	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/SXTH-120DQ(XTH-12SD).jpg" alt="" /></div>				
-                </div>
-                <h3><a class="hover-effect" href="#">SXTH-120DQ(XTH-12SD)</a></h3>
-                <p></p>
-            </div>
-        </li>
-        <li class="span3">
-            <div class="thumbnail-style thumbnail-kenburn">
-            	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/SXT-250ZQ(SX-25D).jpg" alt="" /></div>				
-                </div>
-                <h3><a class="hover-effect" href="#">SXT-250ZQ(SX-25D)</a></h3>
-                <p></p>
-            </div>
-        </li>
-        <li class="span3">
-            <div class="thumbnail-style thumbnail-kenburn">
-            	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/SXTH-120DQ(XTH-12SD).jpg" alt="" /></div>					
-                </div>
-                <h3><a class="hover-effect" href="#">SXTH-120DQ(XTH-12SD)</a></h3>
-                <p></p>
-            </div>
-        </li>
-    </ul>
-    <div class="headline"><h3>烘干机设备系列</h3></div>
-    <ul class="thumbnails">
-        <li class="span3">
-            <div class="thumbnail-style thumbnail-kenburn">
-            	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/2000Z(DQ)烘干机.jpg" alt="" /></div>				
-                </div>
-                <h3><a class="hover-effect" href="#">2000Z(DQ)烘干机</a></h3>
-                <p></p>
-            </div>
-        </li>
-        <li class="span3">
-            <div class="thumbnail-style thumbnail-kenburn">
-            	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/700DQ烘干机.jpg" alt="" /></div>				
-                </div>
-                <h3><a class="hover-effect" href="#">700DQ烘干机</a></h3>
-                <p></p>
-            </div>
-        </li>
-        <li class="span3">
-            <div class="thumbnail-style thumbnail-kenburn">
-            	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/SXT-250ZQ(SX-25D).jpg" alt="" /></div>				
-                </div>
-                <h3><a class="hover-effect" href="#">SXT-250ZQ(SX-25D)</a></h3>
-                <p></p>
-            </div>
-        </li>
-        <li class="span3">
-            <div class="thumbnail-style thumbnail-kenburn">
-            	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/SXTH-120DQ(XTH-12SD).jpg" alt="" /></div>					
-                </div>
-                <h3><a class="hover-effect" href="#">SXTH-120DQ(XTH-12SD)</a></h3>
-                <p></p>
-            </div>
-        </li>
-    </ul>
+        </div><!--/span7-->
+        <!-- //End Tabs and Carousel -->
+        
+        <div class="span5">
+        	<h2>PM系列裘皮干洗机</h2>
+            <h4>	
+            	1、GXD系列Ⅲ型双缸石油干洗机选用先进的绿色洗涤剂，此
+            	   &nbsp&nbsp&nbsp洗涤剂清澈透明，油质好，比重轻，含水量少，油质不易
+            	   &nbsp&nbsp&nbsp变酸，变臭，较无刺鼻味，使衣服柔软，不伤害身体，无
+            	   &nbsp&nbsp&nbsp害、不污染，确保使用者的健康。对于化学纤维及钮扣、
+            	   &nbsp&nbsp&nbsp装饰品不损害，洁净力强，干洗速度快，洗后衣物清洁、
+            	   &nbsp&nbsp&nbsp柔软、蓬松。
+            </h4>
+            <h4>
+            	2、GXD系列Ⅲ型双缸石油干洗机采用进口变频器驱动，能充
+            	   &nbsp&nbsp&nbsp分保证洗涤均布，脱液的理想状态。
+            </h4>
+			<h4>3、GXD系列Ⅲ型双缸石油干洗机采用傻瓜型设计，使洗涤全
+				   &nbsp&nbsp&nbsp过程自动完成。 
+		    </h4>
+			<h4>4、GXD系列Ⅲ型双缸石油干洗机采用高效过滤器，过滤性能
+				   &nbsp&nbsp&nbsp好，经久耐用。
+			</h4>
+			<h4>5、GXD系列Ⅲ型双缸石油干洗机采用高科技小型电动阀门配
+				   &nbsp&nbsp&nbsp套，溶液流量调节自动控制。
+			</h4>
+        </div>
+    </div><!--/row-fluid-->
     <div class="headline"><h3>水洗车间设备系列</h3></div>
     <ul class="thumbnails">
         <li class="span3">
