--- a/code/LaundryWeb/Home/Tpl/Index/index.html
+++ b/code/LaundryWeb/Home/Tpl/Index/index.html
@@ -19,12 +19,11 @@
     	videojs.options.flash.swf = "__PUBLIC__/ThirdParty/video/video-js.swf";
   	</script> 	
 	<include file="./Home/Tpl/PublicTpl/css.html"/>
-	<style>
+<style>
 html,body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
-	
 }
 
 #container {
@@ -32,7 +31,6 @@ html,body {
 	height: auto !important;
 	height: 100%; /*IE6不识别min-height*/
 	position: relative;
-	
 }
 
 #header {
@@ -182,11 +180,11 @@ html,body {
                     <span style="color: #029706;">*茉莉</span>
                 </div>
 
-                <div class="caption large_text sfr" data-x="210" data-y="245" data-speed="300" data-start="1100" data-easing="easeOutExpo">
+                <div class="caption large_text sfr" data-x="180" data-y="245" data-speed="300" data-start="1100" data-easing="easeOutExpo">
                      <span style="color: #029706;">*玫瑰</span>
                 </div>
                 
-				<div class="caption large_text sfr" data-x="322" data-y="313" data-speed="300" data-start="1100" data-easing="easeOutExpo">
+				<div class="caption large_text sfr" data-x="282" data-y="313" data-speed="300" data-start="1100" data-easing="easeOutExpo">
                      <span style="color: #029706;">*桂花</span>
                 </div>
 				
@@ -261,11 +259,100 @@ html,body {
     </div>
 </div>
 <!--=== End Slider ===-->
+<!--=== Purchase Block ===-->
+<div class="row-fluid purchase margin-bottom-30">
+    <div class="container">
+		<div class="span9">
+            <span>Unify is a clean and fully responsive incredible Template.</span>
+            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi  vehicula sem ut volutpat. Ut non libero magna fusce condimentum eleifend enim a feugiat.</p>
+        </div>
+        <a href="http://sc.chinaz.com/moban/" class="btn-buy hover-effect">Purchase Now</a>
+    </div>
+</div><!--/row-fluid-->
+<!-- End Purchase Block -->
+<!--=== Content Part ===-->
+<div class="container">	
+	<!-- Service Blocks -->
+	<div class="row-fluid">
+    	<div class="span4">
+    		<div class="service clearfix">
+                <i class="icon-resize-small"></i>
+    			<div class="desc">
+    				<h4>Fully Responsive</h4>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus etiam sem...</p>
+    			</div>
+    		</div>	
+    	</div>
+    	<div class="span4">
+    		<div class="service clearfix">
+                <i class="icon-cogs"></i>
+    			<div class="desc">
+    				<h4>HTML5 + CSS3</h4>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus etiam sem...</p>
+    			</div>
+    		</div>	
+    	</div>
+    	<div class="span4">
+    		<div class="service clearfix">
+                <i class="icon-plane"></i>
+    			<div class="desc">
+    				<h4>Launch Ready</h4>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus etiam sem...</p>
+    			</div>
+    		</div>	
+    	</div>			    
+	</div><!--/row-fluid-->
+	<!-- //End Service Blokcs -->
 
-<!--=== Copyright ===-->
-<div id="footer" >
-<include file="./Home/Tpl/PublicTpl/copyright.html"/>
+	<!-- Recent Works -->
+	<div class="headline"><h3>Recent Works</h3></div>
+    <ul class="thumbnails">
+        <li class="span3">
+            <div class="thumbnail-style thumbnail-kenburn">
+            	<div class="thumbnail-img">
+                    <div class="overflow-hidden"><img src="assets/img/carousel/2.jpg" alt="" /></div>
+                    <a class="btn-more hover-effect" href="#">read more +</a>					
+                </div>
+                <h3><a class="hover-effect" href="#">Our Work</a></h3>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+            </div>
+        </li>
+        <li class="span3">
+            <div class="thumbnail-style thumbnail-kenburn">
+            	<div class="thumbnail-img">
+                    <div class="overflow-hidden"><img src="assets/img/carousel/3.jpg" alt="" /></div>
+                    <a class="btn-more hover-effect" href="#">read more +</a>					
+                </div>
+                <h3><a class="hover-effect" href="#">One More Work</a></h3>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+            </div>
+        </li>
+        <li class="span3">
+            <div class="thumbnail-style thumbnail-kenburn">
+            	<div class="thumbnail-img">
+                    <div class="overflow-hidden"><img src="assets/img/carousel/9.jpg" alt="" /></div>
+                    <a class="btn-more hover-effect" href="#">read more +</a>					
+                </div>
+                <h3><a class="hover-effect" href="#">Another Work</a></h3>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+            </div>
+        </li>
+        <li class="span3">
+            <div class="thumbnail-style thumbnail-kenburn">
+            	<div class="thumbnail-img">
+                    <div class="overflow-hidden"><img src="assets/img/carousel/10.jpg" alt="" /></div>
+                    <a class="btn-more hover-effect" href="#">read more +</a>					
+                </div>
+                <h3><a class="hover-effect" href="#">Huge Work</a></h3>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+            </div>
+        </li>
+    </ul><!--/thumbnails-->
+	<!-- //End Recent Works -->
 </div>
+<div id="footer" >
+<!--=== Copyright ===-->
+<include file="./Home/Tpl/PublicTpl/copyright.html"/>
 <!--=== End Copyright ===-->
 </div>
 <include file="./Home/Tpl/PublicTpl/js.html"/>
