更新公司简介页面，首页

--- a/code/LaundryWeb/Home/Tpl/Index/equipment.html
+++ b/code/LaundryWeb/Home/Tpl/Index/equipment.html
@@ -65,7 +65,7 @@
 	<div class="container">
         <h1 class="color-green pull-left">快客洗涤设备展示</h1>
         <ul class="pull-right breadcrumb">
-            <li><a href="index.html"></a> <span class="divider">/</span></li>
+            <li><a href="index.html"></a> <span class="divider"></span></li>
             <li class="active"></li>
         </ul>
     </div><!--/container-->
