--- a/code/LaundryWeb/Home/Tpl/Index/index.html
+++ b/code/LaundryWeb/Home/Tpl/Index/index.html
@@ -118,7 +118,8 @@ html,body {
 </div><!--/header -->      
 <!--=== End Header ===-->
 <!--=== Slider ===-->
-<div class="fullwidthbanner-container" id="page" >
+<div id="page">
+<div class="fullwidthbanner-container">
     <div class="fullwidthabnner" >
         <ul>
         	<!-- THE FIRST SLIDE -->
@@ -263,92 +264,53 @@ html,body {
 <div class="row-fluid purchase margin-bottom-30">
     <div class="container">
 		<div class="span9">
-            <span>Unify is a clean and fully responsive incredible Template.</span>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi  vehicula sem ut volutpat. Ut non libero magna fusce condimentum eleifend enim a feugiat.</p>
+            <span>快客洗涤，在线下单流程</span>
+            <p class="lead">安坐家中，享受这一刻的宁静，轻触按钮即可完成洗衣下单。</p>
         </div>
-        <a href="http://sc.chinaz.com/moban/" class="btn-buy hover-effect">Purchase Now</a>
+        <a href="__URL__/APPDownload.html" class="btn-buy hover-effect">下载快客洗涤APP</a>
     </div>
 </div><!--/row-fluid-->
 <!-- End Purchase Block -->
 <!--=== Content Part ===-->
 <div class="container">	
-	<!-- Service Blocks -->
-	<div class="row-fluid">
-    	<div class="span4">
-    		<div class="service clearfix">
-                <i class="icon-resize-small"></i>
-    			<div class="desc">
-    				<h4>Fully Responsive</h4>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus etiam sem...</p>
-    			</div>
-    		</div>	
-    	</div>
-    	<div class="span4">
-    		<div class="service clearfix">
-                <i class="icon-cogs"></i>
-    			<div class="desc">
-    				<h4>HTML5 + CSS3</h4>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus etiam sem...</p>
-    			</div>
-    		</div>	
-    	</div>
-    	<div class="span4">
-    		<div class="service clearfix">
-                <i class="icon-plane"></i>
-    			<div class="desc">
-    				<h4>Launch Ready</h4>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus etiam sem...</p>
-    			</div>
-    		</div>	
-    	</div>			    
-	</div><!--/row-fluid-->
-	<!-- //End Service Blokcs -->
-
 	<!-- Recent Works -->
-	<div class="headline"><h3>Recent Works</h3></div>
+	<div class="headline"><h3>在线下单</h3></div>
     <ul class="thumbnails">
         <li class="span3">
             <div class="thumbnail-style thumbnail-kenburn">
             	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="assets/img/carousel/2.jpg" alt="" /></div>
-                    <a class="btn-more hover-effect" href="#">read more +</a>					
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/index/online-1.png" alt="" /></div>				
                 </div>
-                <h3><a class="hover-effect" href="#">Our Work</a></h3>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+                <h3><a class="hover-effect" href="#">一键下单</a></h3>
             </div>
         </li>
         <li class="span3">
             <div class="thumbnail-style thumbnail-kenburn">
             	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="assets/img/carousel/3.jpg" alt="" /></div>
-                    <a class="btn-more hover-effect" href="#">read more +</a>					
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/index/online-1.png" alt="" /></div>					
                 </div>
-                <h3><a class="hover-effect" href="#">One More Work</a></h3>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+                <h3><a class="hover-effect" href="#">上门取衣</a></h3>
             </div>
         </li>
         <li class="span3">
             <div class="thumbnail-style thumbnail-kenburn">
             	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="assets/img/carousel/9.jpg" alt="" /></div>
-                    <a class="btn-more hover-effect" href="#">read more +</a>					
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/index/online-1.png" alt="" /></div>					
                 </div>
-                <h3><a class="hover-effect" href="#">Another Work</a></h3>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+                <h3><a class="hover-effect" href="#">完成洗涤</a></h3>
             </div>
         </li>
         <li class="span3">
             <div class="thumbnail-style thumbnail-kenburn">
             	<div class="thumbnail-img">
-                    <div class="overflow-hidden"><img src="assets/img/carousel/10.jpg" alt="" /></div>
-                    <a class="btn-more hover-effect" href="#">read more +</a>					
+                    <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/index/online-1.png" alt="" /></div>				
                 </div>
-                <h3><a class="hover-effect" href="#">Huge Work</a></h3>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+                <h3><a class="hover-effect" href="#">送衣上门</a></h3>
             </div>
         </li>
     </ul><!--/thumbnails-->
 	<!-- //End Recent Works -->
+</div>
 </div>
 <div id="footer" >
 <!--=== Copyright ===-->
