更新网站技术页面

--- a/code/LaundryWeb/Home/Tpl/Index/companyInfo.html
+++ b/code/LaundryWeb/Home/Tpl/Index/companyInfo.html
@@ -69,7 +69,7 @@ p{
 </div><!--/header -->      
 <!--=== End Header ===-->
 <!--=== Breadcrumbs ===-->
-<div class="breadcrumbs margin-bottom-20">
+<div class="breadcrumbs margin-bottom-10">
 	<div class="container">
         <h1 class="color-green pull-left">公司简介</h1>
         <ul class="pull-right breadcrumb">
@@ -87,7 +87,9 @@ p{
     	<div class="span9">
         	<div class="blog margin-bottom-30">
             	<div class="headline"><h3 style="color:black">快客洗涤公司简介</h3></div>
-                <div class="blog-img" align="center" ><img src="__PUBLIC__/Fuego/img/company/bg1.png" alt="" /></div>
+                <div class="blog-img" align="center" >
+                	<img src="__PUBLIC__/Fuego/img/company/bg1.png" alt="" />
+                </div>
 				<p style="font-size:1.3em">
 				贵州省金州快客清洁服务有限公司是一家集干洗衣物、洗涤技术咨询培训，室内保洁及物业管理等多项服务为一体的O2O模式专业环保型清洁服务公司。
 				</p>
@@ -109,27 +111,27 @@ p{
             <div class="posts margin-bottom-20">
                 <div class="headline"><h3>快客最新动态</h3></div>
                 <dl class="dl-horizontal">
-                    <dt><a href="#"><img src="__PUBLIC__/Fuego/img/company/WebSite.png" alt="" /></a></dt>
+                    <dt><a><img src="__PUBLIC__/Fuego/img/company/WebSite.png" alt="" /></a></dt>
                     <dd>
-                        <p><a href="#">快客洗涤官方网站于2015年2月20号正式上线。</a></p> 
+                        <p><a>快客洗涤官方网站于2015年2月20号正式上线。</a></p> 
                     </dd>
                 </dl>
                 <dl class="dl-horizontal">
-                    <dt><a href="#"><img src="__PUBLIC__/Fuego/img/company/app.png" alt="" /></a></dt>
+                    <dt><a><img src="__PUBLIC__/Fuego/img/company/app.png" alt="" /></a></dt>
                     <dd>
-                        <p><a href="#">快客洗涤APP IOS版于2015年2月14号正式上线。</a></p> 
+                        <p><a>快客洗涤APP IOS版于2015年2月14号正式上线。</a></p> 
                     </dd>
                 </dl>
                 <dl class="dl-horizontal">
-                    <dt><a href="#"><img src="__PUBLIC__/Fuego/img/company/app.png" alt="" /></a></dt>
+                    <dt><a><img src="__PUBLIC__/Fuego/img/company/app.png" alt="" /></a></dt>
                     <dd>
-                        <p><a href="#">快客洗涤APP Android版于2015年2月6号正式上线。</a></p> 
+                        <p><a>快客洗涤APP Android版于2015年2月6号正式上线。</a></p> 
                     </dd>
                 </dl>
                 <dl class="dl-horizontal">
-                    <dt><a href="#"><img src="__PUBLIC__/Fuego/img/company/histroy.jpg" alt="" /></a></dt>
+                    <dt><a><img src="__PUBLIC__/Fuego/img/company/histroy.jpg" alt="" /></a></dt>
                     <dd>
-                        <p><a href="#">金州快客清洁服务有限公司经过长期的策划和筹备，于2014年12月1日正式成立了！</a></p> 
+                        <p><a>金州快客清洁服务有限公司经过长期的策划和筹备，于2014年12月1日正式成立了！</a></p> 
                     </dd>
                 </dl>
             </div><!--/posts-->
