--- a/code/LaundryWeb/Home/Tpl/Index/contactUs.html
+++ b/code/LaundryWeb/Home/Tpl/Index/contactUs.html
@@ -129,10 +129,10 @@ html,body {
         	<!-- Contacts -->
             <div class="headline"><h3>联系方式</h3></div>
             <ul class="unstyled who margin-bottom-20">
-                <li><a href="#"><i class="icon-home"></i>联系地址……</a></li>
-                <li><a href="#"><i class="icon-envelope-alt"></i>联系邮箱……</a></li>
-                <li><a href="#"><i class="icon-globe"></i>联系人……</a></li>
-                <li><a href="#"><i class="icon-phone-sign"></i>联系电话……</a></li>
+                <li><a ><i class="icon-home"></i>联系地址……</a></li>
+                <li><a ><i class="icon-envelope-alt"></i>联系邮箱……</a></li>
+                <li><a ><i class="icon-globe"></i>联系人……</a></li>
+                <li><a ><i class="icon-phone-sign"></i>联系电话……</a></li>
             </ul>
 
         	<!-- Business Hours -->
