--- a/code/LaundryWeb/Home/Tpl/Index/equipment.html
+++ b/code/LaundryWeb/Home/Tpl/Index/equipment.html
@@ -11,7 +11,12 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <include file="./Home/Tpl/PublicTpl/css.html"/>  
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>	
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
+<style type="text/css">
+p{
+ text-indent: 2em; /*em是相对单位，2em即现在一个字大小的两倍*/
+}
+</style>	
 <body>
 <!--=== Header ===-->
 <div class="header" style="margin-top:20px;">               
@@ -61,7 +66,7 @@
 </div><!--/header -->      
 <!--=== End Header ===-->
 <!--=== Breadcrumbs ===-->
-<div class="breadcrumbs margin-bottom-40">
+<div class="breadcrumbs margin-bottom-10">
 	<div class="container">
         <h1 class="color-green pull-left">快客洗涤设备展示</h1>
         <ul class="pull-right breadcrumb">
@@ -124,27 +129,23 @@
         
         <div class="span5">
         	<h2>PM系列裘皮干洗机</h2>
-            <h4>	
-            	1、GXD系列Ⅲ型双缸石油干洗机选用先进的绿色洗涤剂，此
-            	   &nbsp&nbsp&nbsp洗涤剂清澈透明，油质好，比重轻，含水量少，油质不易
-            	   &nbsp&nbsp&nbsp变酸，变臭，较无刺鼻味，使衣服柔软，不伤害身体，无
-            	   &nbsp&nbsp&nbsp害、不污染，确保使用者的健康。对于化学纤维及钮扣、
-            	   &nbsp&nbsp&nbsp装饰品不损害，洁净力强，干洗速度快，洗后衣物清洁、
-            	   &nbsp&nbsp&nbsp柔软、蓬松。
-            </h4>
-            <h4>
-            	2、GXD系列Ⅲ型双缸石油干洗机采用进口变频器驱动，能充
-            	   &nbsp&nbsp&nbsp分保证洗涤均布，脱液的理想状态。
-            </h4>
-			<h4>3、GXD系列Ⅲ型双缸石油干洗机采用傻瓜型设计，使洗涤全
-				   &nbsp&nbsp&nbsp过程自动完成。 
-		    </h4>
-			<h4>4、GXD系列Ⅲ型双缸石油干洗机采用高效过滤器，过滤性能
-				   &nbsp&nbsp&nbsp好，经久耐用。
-			</h4>
-			<h4>5、GXD系列Ⅲ型双缸石油干洗机采用高科技小型电动阀门配
-				   &nbsp&nbsp&nbsp套，溶液流量调节自动控制。
-			</h4>
+            <p style="font-size:1.3em">	
+            	1、干洗机选用先进的绿色洗涤剂，此洗涤剂清澈透明，油质好，比重轻，含水量少，油质不易
+            	变酸，变臭，较无刺鼻味，使衣服柔软，不伤害身体，无害、不污染，确保使用者的健康。洁净力强，干洗速度快，
+            	洗后衣物清洁、柔软、蓬松。
+            </p>
+            <p style="font-size:1.3em">
+            	2、GXD系列Ⅲ型双缸石油干洗机采用进口变频器驱动，能充分保证洗涤均布，脱液的理想状态。
+            </p>
+			<p style="font-size:1.3em">
+				3、GXD系列Ⅲ型双缸石油干洗机采用傻瓜型设计，使洗涤全过程自动完成。 
+		    </p>
+			<p style="font-size:1.3em">
+				4、GXD系列Ⅲ型双缸石油干洗机采用高效过滤器，过滤性能好，经久耐用。
+			</p>
+			<p style="font-size:1.3em">
+				5、GXD系列Ⅲ型双缸石油干洗机采用高科技小型电动阀门配套，溶液流量调节自动控制。
+			</p>
         </div>
     </div><!--/row-fluid-->
     <div class="headline"><h3>水洗车间设备系列</h3></div>
@@ -154,7 +155,7 @@
             	<div class="thumbnail-img">
                     <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/100公斤型烘干机.jpg" alt="" /></div>				
                 </div>
-                <h3><a class="hover-effect" href="#">100公斤型烘干机</a></h3>
+                <h3><a class="hover-effect">100公斤型烘干机</a></h3>
                 <p></p>
             </div>
         </li>
@@ -163,7 +164,7 @@
             	<div class="thumbnail-img">
                     <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/100公斤型洗脱机.jpg" alt="" /></div>				
                 </div>
-                <h3><a class="hover-effect" href="#">100公斤型洗脱机</a></h3>
+                <h3><a class="hover-effect">100公斤型洗脱机</a></h3>
                 <p></p>
             </div>
         </li>
@@ -172,7 +173,7 @@
             	<div class="thumbnail-img">
                     <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/辊式烫平机（三辊）.jpg" alt="" /></div>				
                 </div>
-                <h3><a class="hover-effect" href="#">辊式烫平机（三辊）</a></h3>
+                <h3><a class="hover-effect">辊式烫平机（三辊）</a></h3>
                 <p></p>
             </div>
         </li>
@@ -181,7 +182,7 @@
             	<div class="thumbnail-img">
                     <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/自动型折叠机.jpg" alt="" /></div>					
                 </div>
-                <h3><a class="hover-effect" href="#">自动型折叠机</a></h3>
+                <h3><a class="hover-effect">自动型折叠机</a></h3>
                 <p></p>
             </div>
         </li>
@@ -191,7 +192,7 @@
     <div class="row-fluid margin-bottom-40">
         <ul id="list" class="bxslider recent-work">
             <li>
-                <a href="#">
+                <a >
                 	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/ZRD-Z(D)人像机.jpg" alt="" /></em>
                     <span>
                         <strong>ZRD-Z(D)人像机</strong>
@@ -200,7 +201,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a >
                 	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/YB-1衣物包装机.jpg" alt="" /></em>
                     <span>
                         <strong>YB-1衣物包装机</strong>
@@ -209,7 +210,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a >
                 	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/XGF-Q-Z吸鼓风烫台.jpg" alt="" /></em>
                     <span>
                         <strong>XGF-Q-Z吸鼓风烫台</strong>
@@ -218,7 +219,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a >
                 	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/QZT-B(C)去渍台.jpg" alt="" /></em>
                     <span>
                         <strong>QZT-B(C)去渍台</strong>
@@ -227,7 +228,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a >
                 	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/LYX-600衣物消毒柜.jpg" alt="" /></em>
                     <span>
                         <strong>LYX-600衣物消毒柜</strong>
@@ -236,7 +237,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a >
                 	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/equipment/DZF-蒸汽发生器.jpg" alt="" /></em>
                     <span>
                         <strong>DZF-蒸汽发生器</strong>
