--- a/code/LaundryWeb/Home/Tpl/Index/index.html
+++ b/code/LaundryWeb/Home/Tpl/Index/index.html
@@ -281,7 +281,7 @@ html,body {
             	<div class="thumbnail-img">
                     <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/index/online-1.png" alt="" /></div>				
                 </div>
-                <h3><a class="hover-effect" href="#">一键下单</a></h3>
+                <h3><a class="hover-effect">一键下单</a></h3>
             </div>
         </li>
         <li class="span3">
@@ -289,7 +289,7 @@ html,body {
             	<div class="thumbnail-img">
                     <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/index/online-1.png" alt="" /></div>					
                 </div>
-                <h3><a class="hover-effect" href="#">上门取衣</a></h3>
+                <h3><a class="hover-effect">上门取衣</a></h3>
             </div>
         </li>
         <li class="span3">
@@ -297,7 +297,7 @@ html,body {
             	<div class="thumbnail-img">
                     <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/index/online-1.png" alt="" /></div>					
                 </div>
-                <h3><a class="hover-effect" href="#">完成洗涤</a></h3>
+                <h3><a class="hover-effect">完成洗涤</a></h3>
             </div>
         </li>
         <li class="span3">
@@ -305,7 +305,7 @@ html,body {
             	<div class="thumbnail-img">
                     <div class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/index/online-1.png" alt="" /></div>				
                 </div>
-                <h3><a class="hover-effect" href="#">送衣上门</a></h3>
+                <h3><a class="hover-effect">送衣上门</a></h3>
             </div>
         </li>
     </ul><!--/thumbnails-->
