APP后台，修复编辑产品bug，增加APP端更多页面。完善订单管理，完成APP现在功能。

--- a/code/server/Admin/Tpl/AppDownload/kuaikexidi_Android.html
+++ b/code/server/Admin/Tpl/AppDownload/kuaikexidi_Android.html
@@ -1,13 +1,43 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta charset="UTF-8">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<title>快客洗涤</title>
+<link href="__PUBLIC__/ThirdParty/kuaidi/style.css" type="text/css" rel="stylesheet">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0, user-scalable=yes" />
+<script>
+var _hmt = _hmt || [];
+</script>
+<style>
+.btn-bar{width:130px;position:relative}
+.xiazai dd a{width:100%}
+.xz_ck dd{background-image:none}
+</style>
 </head>
 <body>
+<div class="main">
+	<div class="top" style="margin-top:50px;">
+		<img src="__PUBLIC__/Fuego/img/download.png" width="81.5%" >
+	</div>	
+	<div class="xiazai">
+		<dl class="xz_ck" style="padding-bottom:30px; padding-top:0;">
+            <div class="btn-bar">
+			<dd><p></p><a id="an_ck_bottom" class="btn_download" onclick="_hmt.push(['_trackEvent', 'an_yd_ck', 'yd_download', 'chengke']);" href="http://www.kkxd.com.cn/Laundry/Public/App/Android/kuaikexidi.apk"><img src="__PUBLIC__/Fuego/img/tu12_20140226.png" width="100%"/></a></dd>
+            </div>
+			<div class="clear"></div>
+		</dl>
+	</div>
+</div>
+<!-- add by charlse at 20140409 -->
+<script type="text/javascript" src="__PUBLIC__/ThirdParty/kuaidi/zepto-min.js"></script>
+<script type="text/javascript" src="__PUBLIC__/ThirdParty/kuaidi/wechartnote.js"></script>
+<!-- end -->
 
+<div style="display:none">
 <script type="text/javascript">
- 
-window.location ='__PUBLIC__/App/Android/Laundry.apk';
-</script>
+	var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+	document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F880ac891821851b8c6b00780215b1293' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+</div>
 </body>
 </html>
